# serp-mini-ivi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: build.sh  check_navit_setup.sh  download_navit_map.sh  generate.sh  install_navit_ubuntu.sh  install_qtquick_deps_ubuntu.sh  run.sh  status.sh  stop.sh
scripts/lib/: common.sh
specs/: serp.sidl
specs/common/: climate.sidl  common.sidl  contacts.sidl  navigation.sidl  phone.sidl  radio.sidl
specs/deployments/: monolith.sidl  monolith.suml  multiprocess_dbus_console.sidl  multiprocess_dbus_console.suml  multiprocess_dbus_qtquick.sidl  multiprocess_dbus_qtquick.suml  multiprocess_grpc_qtquick.sidl  multiprocess_grpc_qtquick.suml
specs/services/cabin/CarClimateManager/: CarClimateManager.sidl  ICarClimateManager.sidl
specs/services/cabin/CarNavigationManager/: CarNavigationManager.sidl  ICarNavigationManager.sidl
specs/services/cabin/CarPhoneManager/: CarPhoneManager.sidl  ICarPhoneManager.sidl
specs/services/cabin/CarUserManager/: CarUserManager.sidl  ICarUserManager.sidl
specs/services/hmi/HmiApp/: HmiApp.sidl
specs/services/media/CarAudioManager/: CarAudioManager.sidl  ICarAudioManager.sidl
specs/services/media/CarMediaManager/: CarMediaManager.sidl  ICarMediaDebugPrimitives.sidl  ICarMediaManager.sidl
specs/services/media/CarRadioManager/: CarRadioManager.sidl  ICarRadioManager.sidl
specs/services/phone/CarCallManager/: CarCallManager.sidl  ICarCallManager.sidl
specs/services/phone/CarContactsManager/: CarContactsManager.sidl  ICarContactsManager.sidl
specs/services/platform/AudioHal/: AudioHal.sidl  IAudioHal.sidl
specs/services/platform/BtGateway/: BtGateway.sidl  IBtHfp.sidl  IBtPbap.sidl
specs/services/platform/ClimateHal/: ClimateHal.sidl  IClimateHal.sidl
specs/services/platform/LocationHal/: ILocationHal.sidl  LocationHal.sidl  service.behavior.yaml
specs/services/platform/PersistenceHal/: IPersistenceHal.sidl  PersistenceHal.sidl
specs/services/platform/PhoneHal/: IPhoneHal.sidl  PhoneHal.sidl
specs/services/platform/RadioHal/: IRadioHal.sidl  RadioHal.sidl
specs/services/platform/VehicleHal/: IVehicleHal.sidl  VehicleHal.sidl
specs/services/system/CarNotificationManager/: CarNotificationManager.sidl  ICarNotificationManager.sidl
specs/services/system/CarPowerManager/: CarPowerManager.sidl  ICarPowerManager.sidl
src/hmi/console/: CMakeLists.txt
src/hmi/console/client/: HmiActions.hpp  HmiClient.hpp  RemoteHmiClient.cpp  RemoteHmiClient.hpp
src/hmi/console/composition/: Minivi.cpp  Minivi.hpp
src/hmi/console/modules/: ClimateModule.cpp  HmiModules.cpp  HmiModules.hpp  HomeModule.cpp  MediaPlayerModule.cpp  ModuleUi.hpp  NavigationModule.cpp  NotificationsModule.cpp  PhoneModule.cpp  ProfileModule.cpp  RadioModule.cpp  SettingsModule.cpp  VehicleModule.cpp
src/hmi/console/shell/: HmiApp.cpp  HmiApp.hpp  HmiController.cpp  HmiController.hpp  HmiRenderer.cpp  HmiRenderer.hpp  TerminalInput.cpp  TerminalInput.hpp  main.cpp
src/hmi/console/state/: HmiScreens.cpp  HmiScreens.hpp  HmiState.hpp  HmiTypes.cpp  HmiTypes.hpp
src/hmi/console/ui/: UiPrimitives.cpp  UiPrimitives.hpp
src/hmi/qtquick/: CMakeLists.txt
src/hmi/qtquick/app/: HmiViewModel.cpp  HmiViewModel.hpp  main.cpp
src/hmi/qtquick/qml/: Main.qml  qml.qrc
src/hmi/qtquick/qml/modules/: ActionBar.qml  ClimatePane.qml  HomePane.qml  MediaPane.qml  NavRail.qml  NavigationPane.qml  PhonePane.qml  SettingsPane.qml  VehiclePane.qml
src/hmi/qtquick6/app/: main.cpp
(+85 files in other folders)
